...
                        searchText = ""
                    }
                }) {
                    Text("Cancel")
                }
                .hoverEffect()
                .accessibility(identifier: "cancelButton")
                .buttonStyle(BorderlessButtonStyle())
                .padding(.leading, 8)
                .transition(.move(edge: .trailing))
            }

        }
...
                }
            }
        }
        .transition(.move(edge: .trailing))
        .buttonStyle(PlainButtonStyle())
        .accessibilityElement(children: .contain)
        .accessibility(identifier: "searchBar")
    }
}

struct SearchField_Preview_Helper: View {
    @State var query: String
    @State var edit: Bool
...
