...
            if SettingsStore.shared.startupCheckBirdOfTheDay {
                state.checkBirdOfTheDay()
            }
        })
    }

    var sortButton: some View {
        Button(action: state.showSortOptions) {
            HStack {
                Image(systemName: "arrow.up.arrow.down.circle")
                    .imageScale(.large)
            }
            .padding(4)
        }
        .hoverEffect()
        .accessibility(identifier: "sortButton")
    }

    var filterButton: some View {
        Button(action: state.showFilter) {
            Text("Filter")
                .padding(4)
                .overlay(Group {
                    if !state.filters.isEmpty {
                        Image(systemName: "\(state.filters.count).circle.fill")
...
