...
enum FilterType: String, CaseIterable, CustomStringConvertible {
    case haeufigeart = "filterhaeufigeart"
    case lebensraum = "filterlebensraum"
    case nahrung = "filternahrung"
    case roteListe = "filterrotelistech"
    case entwicklungatlas = "filterentwicklungatlas"
    case vogelgruppe = "filtervogelgruppe"
    case vogelstimme = "voice"
    case favorites = "favorites"
    case undefined

    var shouldSortForDisplay: Bool {
        switch self {
...
